Thu Dec  9 08:19:42 PST 1999
(Mandrake)

a few minor layout changes.  moved the buttons up around the scrollbar.
increassed some lengths of some variables.

---------------------------------------------------------------------------

Mon Dec 27 10:04:09 PST 1999
(Mandrake)

starting to evolve out of glade, so removing the glade project file so no one
accidentally rebuilds it.  Some minor interface bits.  Going to hook
everything together today.

---------------------------------------------------------------------------

Mon Dec 27 10:30:44 PST 1999
(Mandrake)

finally added the graphics for all the play/pause/etc buttons.  Still have
more cleaning to do in here.

---------------------------------------------------------------------------

Mon Dec 27 13:47:19 PST 1999
(Mandrake)

Hooked in all the menus correctly now.  Need to fix the preferences box to
actually work correctly, too.

---------------------------------------------------------------------------

Mon Dec 27 14:18:49 PST 1999
(Mandrake)

Hooked the other windows into their appropriate locations.

---------------------------------------------------------------------------

Mon Dec 27 15:01:57 PST 1999
(Mandrake)

Exit works now.  also closing the main window exits the app.
now you can only have 1 of each window open at a time, also.