@@ -1,7 +1,3 @@
-/*
- * Initial main.c file generated by Glade. Edit as required.
- * Glade will not overwrite this file.
- */
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
@@ -29,11 +25,6 @@ int main(int argc, char *argv[])
 	add_pixmap_directory(PACKAGE_DATA_DIR "/pixmaps");
 	add_pixmap_directory(PACKAGE_SOURCE_DIR "/pixmaps");
 
-	/*
-	 * The following code was added by Glade to create one of each component
-	 * (except popup menus), just so that you see something after building
-	 * the project. Delete any components that you don't want shown initially.
-	 */
 	VA_Flipbook = create_VA_Flipbook();
 	gtk_widget_show(VA_Flipbook);
 	gtk_signal_connect (GTK_OBJECT (VA_Flipbook), "destroy",
